maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (!estFaceMur()) {
		gauche();
	}
	droite();
	if (getDirection() == direction.NORD) {
	while (!estSurBiscuit()) {
		gauche();
		if (estFaceMur()) {
			while (estFaceMur()) {
				droite();
			}
			avance();
		} else {
			avance();
		}
	}
	}
	prendBiscuit();
}
